prod-croatia-camunda-main@83c91ad4a57/camunda-platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
    kubernetes.io/metadata.name: camunda-platform
  name: camunda
