prod-croatia-camunda-main@83c91ad4a57/camunda-platform/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camunda
  namespace: camunda
spec:
  host: camunda.apps.prod-nonpci-appdb.nrapp.cloud
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: None
    termination: Passthrough
  to:
    kind: Service
    name: camunda
    weight: 100
  wildcardPolicy: None
